# product-development-pipeline

./: .gitignore  .gitlab-ci.example.yml  .gitlab-ci.yml  CLAUDE.md  LICENSE  README.en.md  README.md
sova/: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  alembic.ini  docker-compose.local.yml  docker-compose.yml  pyproject.toml
sova/alembic/: env.py
sova/alembic/versions/: 001_initial_schema.py
sova/dashboard/: index.html  package-lock.json  package.json  vite.config.ts
sova/dashboard/src/: App.tsx  index.css
sova/k8s/argocd/: application.yaml
sova/k8s/base/: ai-worker-deployment.yaml  configmap.yaml  (+13 more)
sova/src/: config.py  database.py  main.py
sova/tests/: conftest.py  test_ai_context_builder.py  test_ai_prompts.py  test_ai_service.py  test_ai_worker.py  test_auth.py  test_billing_service.py  test_category_matcher.py  test_cron_worker.py  test_encryption_service.py  test_expense_parser.py  test_handlers_ai.py  test_handlers_balance.py  test_handlers_billing.py  test_handlers_expense.py  test_handlers_invite.py  test_handlers_menu.py  test_handlers_news.py  test_handlers_start.py  test_handlers_today.py  test_handlers_trade.py  test_health.py  test_integration_service.py  test_llm_provider.py  test_models.py  test_news_aggregator.py  test_news_parser.py  test_news_personalizer.py  test_notification_service.py  test_oauth_callback.py  test_tbank_client.py  test_tbank_mapper.py  test_tbank_sync.py  test_token_refresh.py  test_trade_parser.py  test_trade_service.py  test_trade_worker.py  test_transaction_service.py  test_user_service.py  test_webhook.py  (+3 more)
(+172 files in other folders)
